seperated all scripts into independent files, fixed button alignment and responsiveness in tasks page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,37 @@
+/* Headings and Paragraphs */
+
+h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+
+h3 {
+    font-size: 23px;
+    margin-bottom: 15px;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+.normal_title {
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+
+
+/* Navbar */
+
 .navbaritem { 
     text-align: center;
 
 }
 
 .navbar-nav .nav-link {
-    font-size: 1.2rem; /* Slightly larger text */
+    font-size: 1.2rem;
     font-weight: 500;  /* Semi-bold */
 }
 
@@ -23,15 +50,14 @@
 }
 
 .navlinks{
-    margin-left: 10%;  /* Adjust the left margin */
-    margin-right: 10%; /* Adjust the right margin */
+    margin-left: 10%;  
+    margin-right: 10%;
 }
 
 .searchnav {
     max-width: 200px; /* Set the maximum width of the input field */
     width: 100%; /* Allow it to expand up to max-width without breaking responsiveness */
 }
-
 
 /* Apply margin to the search bar only when the navbar collapses (on small screens) */
 @media (max-width: 767px) {
@@ -83,15 +109,20 @@
     color: white;               /* Text color */  
 }
 
-.lightgreenbutton {
-    background-color: #00aa69;  
+.greybutton {
+    background-color: #9e9e9e79;  
     color: white;               /* Text color */
     border: none;               /* Remove border */
 }
 
-.lightgreenbutton:hover {
-    background-color: #00d483;
+.greybutton:hover {
+    background-color: #6c6c6c7c;
     color: white;               /* Text color */  
+}
+
+.fixed-button {
+    min-width: 120px; /* Adjust as needed */
+    height: 40px; /* Ensures uniform height */
 }
 
 /* Dark mode background */
@@ -106,6 +137,7 @@
 
 
 
+/* Hero section */
 
 .hero-section {
     background-image: url('../images/mnt_tr_fog2.png');
@@ -144,54 +176,30 @@
     transition: background-color 0.3s ease; /* Smooth transition for background-color */
 }
 
-
-
-h2 {
-    font-size: 28px;
-    margin-bottom: 15px;
-}
-
-h3 {
-    font-size: 23px;
-    margin-bottom: 15px;
-}
-
-p {
-    font-size: 18px;
-    line-height: 1.6;
-}
-
 #carouselExampleCaptions {
     margin-left: 15%;
     margin-right: 15%;
 }
 
-.normal_title {
-    text-align: center;
-    margin-top: 3%;
-    margin-bottom: 3%;
+
+
+/* Footer */
+
+.no-underline {
+    text-decoration: none; /* Removes the underline */
 }
-
-.contact-form {
-    margin-left: 15%;
-    margin-right: 15%;
-}
-
-
-
-
 
 footer {
-    background-color: #ecf0f4 !important;
+    background-color: rgb(248, 249, 250) !important;
     margin-bottom: 0;
 }
 
 footer a {
-    
+    color: rgb(86, 93, 97);
 }
 
 footer a:hover {
-    color: #343a40;
+    color: #01643e;
 }
 
 footer .container {
@@ -226,7 +234,6 @@ footer .text-reset {
 
 
 
-
 /* Contact */
 
 .map-container {
@@ -249,7 +256,6 @@ footer .text-reset {
 
 
 
-
 /* About Page */
 
 .members {
@@ -265,12 +271,12 @@ footer .text-reset {
     text-align: justify;
 }
 
-
-
 .itemsmargins {
     margin-left: 15%;
     margin-right: 15%;
 }
+
+
 
 /* Trips Page */
 
@@ -285,6 +291,7 @@ footer .text-reset {
 }
 
 
+
 /* Horizontal Lines */
 
 .seperator {
@@ -294,6 +301,11 @@ footer .text-reset {
 
 
 /* Contact Form */
+
+.contact-form {
+    margin-left: 15%;
+    margin-right: 15%;
+}
 
 .contact-form label {
     color: rgb(33, 37, 41)
